--- a/IMIKN MAP/IMIKN MAP/AppShell.xaml
+++ b/IMIKN MAP/IMIKN MAP/AppShell.xaml
@@ -3,7 +3,8 @@
        xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
        xmlns:local="clr-namespace:IMIKN_MAP.Views"
        Title="IMIKN_MAP"
-       x:Class="IMIKN_MAP.AppShell">
+       x:Class="IMIKN_MAP.AppShell"
+       FlyoutHeaderTemplate="{DataTemplate local:FlyoutHeaderView}">
 
     <!--
         The overall app visual hierarchy is defined here, along with navigation.
@@ -21,26 +22,21 @@
                 <Setter Property="Shell.UnselectedColor" Value="#95FFFFFF" />
                 <Setter Property="Shell.TabBarBackgroundColor" Value="{StaticResource Primary}" />
                 <Setter Property="Shell.TabBarForegroundColor" Value="White"/>
-                <Setter Property="Shell.TabBarUnselectedColor" Value="#95FFFFFF"/>
-                <Setter Property="Shell.TabBarTitleColor" Value="White"/>
+                <Setter Property="Shell.TabBarUnselectedColor" Value="#404040"/>
+                <Setter Property="Shell.TabBarTitleColor" Value="Black"/>
             </Style>
             <Style TargetType="TabBar" BasedOn="{StaticResource BaseStyle}" />
             <Style TargetType="FlyoutItem" BasedOn="{StaticResource BaseStyle}" />
         </ResourceDictionary>
     </Shell.Resources>
 
-    <TabBar>
-        <ShellContent Title="Map" Icon="icon_about.png" Route="MapPage" ContentTemplate="{DataTemplate local:MapPage}" />
-        <ShellContent Title="Events" Icon="icon_feed.png" ContentTemplate="{DataTemplate local:ItemsPage}" />
-    </TabBar>
-
-    <!--
-        If you would like to navigate to this content you can do so by calling
-        await Shell.Current.GoToAsync("//LoginPage");
-    -->
-    <TabBar>
-        <ShellContent Route="LoginPage" ContentTemplate="{DataTemplate local:LoginPage}" />
-    </TabBar>
-
+    <FlyoutItem Title="УЛК-05">
+        <Tab Title="Map" Icon="icon_about.png">
+            <ShellContent Title="Map" Icon="icon_about.png" Route="MapPage" ContentTemplate="{DataTemplate local:MapPage}" />
+        </Tab>
+        <Tab Title="Events" Icon="icon_feed.png">
+            <ShellContent Title="Events" Icon="icon_feed.png" ContentTemplate="{DataTemplate local:ItemsPage}" />
+        </Tab>
+    </FlyoutItem>
 
 </Shell>
