--- a/IMIKN MAP/IMIKN MAP/Views/FlyoutHeaderView.xaml
+++ b/IMIKN MAP/IMIKN MAP/Views/FlyoutHeaderView.xaml
@@ -9,14 +9,19 @@
     <ContentView.Content>
         <StackLayout HorizontalOptions="Fill" VerticalOptions="Fill" Orientation="Vertical">
 
-            <Label Opacity="0.7" Text="Этаж" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" Margin="0, 10, 0, 0"/>
+            <StackLayout HorizontalOptions="Fill" VerticalOptions="Start" Orientation="Horizontal" Margin="5,0,0,0">
+                <Label Text="Владислав Владимирович" Margin="5" HorizontalOptions="Start" VerticalOptions="Center" TextColor="Black"/>
+                <Button Text="Log out"  HorizontalOptions="EndAndExpand" VerticalOptions="Center" BackgroundColor="White" TextColor="Red"/>
+            </StackLayout>
+
+            <Label Opacity="0.7" Text="Корпус" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" Margin="0, 10, 0, 0" TextColor="Black"/>
             
-            <StackLayout HorizontalOptions="Fill" VerticalOptions="End" Orientation="Horizontal" Margin="0, 0, 0, 10">
+            <!--<StackLayout HorizontalOptions="Fill" VerticalOptions="End" Orientation="Horizontal" Margin="0, 0, 0, 10">
                 <controls:SvgImage Source="1_floor.svg" WidthRequest="45" HeightRequest="45" HorizontalOptions="CenterAndExpand" VerticalOptions="Center"/>
                 <controls:SvgImage Source="2_floor.svg" WidthRequest="45" HeightRequest="45" HorizontalOptions="CenterAndExpand" VerticalOptions="Center"/>
                 <controls:SvgImage Source="3_floor.svg" WidthRequest="45" HeightRequest="45" HorizontalOptions="CenterAndExpand" VerticalOptions="Center"/>
                 <controls:SvgImage Source="4_floor_glow.svg" WidthRequest="45" HeightRequest="45" HorizontalOptions="CenterAndExpand" VerticalOptions="Center"/>
-            </StackLayout>
+            </StackLayout>-->
             
         </StackLayout>
   </ContentView.Content>
